k8s/apps/nodejs-app/overlays/development/service-patch.yaml
# Overrides Service type and adds specific NodePorts for dev testing
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30600     # Backdoor: Static port on every server node for HTTP
    - name: https
      port: 443
      targetPort: 3000
      nodePort: 32543     # Backdoor: Static port on every server node for HTTPS
